--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -15,3 +15,11 @@
 production:
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
   WORDNIK_API_KEY: <%= ENV["WORDNIK_API_KEY"] %>
+
+development:
+  secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
+  WORDNIK_API_KEY: <%= ENV["DEV_WORDNIK_KEY"] %>
+
+test:
+  secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
+  WORDNIK_API_KEY: <%= ENV["TEST_WORDNIK_KEY"] %>
